--- a/charts/ghost/templates/svc.yaml
+++ b/charts/ghost/templates/svc.yaml
@@ -8,6 +8,7 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
   annotations:
+    "helm.sh/hook": foo
     {{- range $key, $value := .Values.service.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
